--- a/css file/css.css
+++ b/css file/css.css
@@ -281,6 +281,9 @@ body{
     position:relative;
     z-index: 1;
 }
+#slider #buttonTestJS{
+    width:15rem
+}
 #slider #imge img{
     width:100%;
     height:600px;
